// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetRepository Should fetch existing verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository Should fetch verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository should fetch a asset data 1`] = `
Array [
  Object {
    "asset_types": Array [
      Object {
        "id": 1,
        "name": "Residential House",
      },
      Object {
        "id": 2,
        "name": "Apartment / Condo",
      },
      Object {
        "id": 3,
        "name": "Villa",
      },
      Object {
        "id": 4,
        "name": "Penthouse",
      },
      Object {
        "id": 5,
        "name": "Studio Apartment",
      },
      Object {
        "id": 6,
        "name": "Independant Floor",
      },
    ],
    "id": 1,
    "name": "Residential",
    "space_types": Array [
      Object {
        "id": 1,
        "name": "Bedroom",
      },
      Object {
        "id": 2,
        "name": "Bathroom",
      },
      Object {
        "id": 3,
        "name": "Balcony",
      },
    ],
  },
  Object {
    "asset_types": Array [
      Object {
        "id": 7,
        "name": "Commercial Office Space",
      },
      Object {
        "id": 8,
        "name": "Office in IT park/SEZ",
      },
      Object {
        "id": 9,
        "name": "Commercial Showroom",
      },
      Object {
        "id": 10,
        "name": "Warehouse / Godown",
      },
    ],
    "id": 2,
    "name": "Commercial",
    "space_types": Array [
      Object {
        "id": 2,
        "name": "Bathroom",
      },
    ],
  },
]
`;

exports[`AssetRepository should fetch a asset detail 1`] = `
Asset {
  "_amenities": Array [
    Data {
      "_count": 0,
      "_id": 1,
      "_name": "Gym",
    },
  ],
  "_assetGroup": Data {
    "_count": 0,
    "_id": 1,
    "_name": "Residential",
  },
  "_assetType": Data {
    "_count": 0,
    "_id": 1,
    "_name": "Farm House",
  },
  "_attachments": Array [
    Attachment {
      "_attachmentType": "IMAGE",
      "_id": 1,
      "_isCoverImage": true,
      "_link": "http://image.png",
      "_mime_type": "Image/Jpeg",
      "_name": "image1.png",
    },
    Attachment {
      "_attachmentType": "VIDEO",
      "_id": 2,
      "_isCoverImage": false,
      "_link": "http://video.mp4",
      "_mime_type": "video/mp4",
      "_name": "video1.mp4",
    },
  ],
  "_availableFrom": "2020-10-14",
  "_blockNumber": "32",
  "_carpetArea": "1000",
  "_carpetAreaUnit": "Sq.ft",
  "_description": "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \\"de Finibus Bonorum et Malorum\\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \\"Lorem ipsum dolor sit amet..\\", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \\"de Finibus Bonorum et Malorum\\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.",
  "_features": Array [
    AssetFeature {
      "_localeKey": "booking_amount",
      "_name": "Booking Amount",
      "_value": 10000,
    },
  ],
  "_floorNumber": 4,
  "_highlights": Array [
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Power packup",
    },
  ],
  "_id": 1,
  "_latitude": "13.77",
  "_longitude": "77.833",
  "_postedOn": "2020-03-12",
  "_projectName": "2972 Westheimer Rd. Santa Ana, NY",
  "_spaces": Array [
    Data {
      "_count": 5,
      "_id": 1,
      "_name": "Beds",
    },
    Data {
      "_count": 10,
      "_id": 2,
      "_name": "Baths",
    },
  ],
  "_totalFloors": 10,
  "_unitNumber": "12",
}
`;

exports[`AssetRepository should fetch a lease term 1`] = `
Array [
  Object {
    "annual_increment_percentage": 5,
    "available_from_date": "2020-09-12",
    "currency_code": "+91",
    "furnishing_status": "SEMI",
    "id": 1,
    "maintenance_amount": 1,
    "maintenance_paid_by": "OWNER",
    "maintenance_schedule": "MONTHLY",
    "minimum_lease_period": 2,
    "monthly_rent_price": 1200,
    "security_deposit_price": 15000,
    "utility_paid_by": "OWNER",
  },
]
`;

exports[`AssetRepository should fetch a sale term 1`] = `
Array [
  Object {
    "available_from_date": "2020-09-12",
    "booking_amount": 500,
    "currency_code": "+91",
    "expected_price": 1200,
    "id": 1,
    "maintenance_amount": 200,
    "maintenance_schedule": "MONTHLY",
    "year_of_construction": 1,
  },
]
`;
